fix table sizing on iOS. Strike through on tables is still broken on iOS, appears to be a bug

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ body.hide_completed .completed {
 
 input[type="checkbox"]:checked + .item_content {
   text-decoration: line-through;
+  -webkit-text-decoration: line-through !important;
 }
 
 input[type="checkbox"] ~ .glyphicon-eye-close,
